--- a/Loiste.html
+++ b/Loiste.html
@@ -42,7 +42,7 @@
         <nav class="navbar navbar-expand-sm navbar-custom fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="LoisteKuvat/logo.JPG" alt="Logo" style="width:40px;" class="rounded-pill me-2">
+                    <img src="logo.JPG" alt="Logo" style="width:40px;" class="rounded-pill me-2">
                     Loiste
                 </a>
 
@@ -104,28 +104,28 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="LoisteKuvat/hameenlinna.jpg" alt="Tullarit2" class="d-block w-100">
+        <img src="hameenlinna.jpg" alt="Tullarit2" class="d-block w-100">
         <div class="carousel-caption">
             <h3><a href="#">Hameenlinna cup</a></h3>
         <p><a href="#">Syksy 2023</a></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="LoisteKuvat/tapanila.jpg" alt="tapanila" class="d-block w-100">
+        <img src="tapanila.jpg" alt="tapanila" class="d-block w-100">
         <div class="carousel-caption">
             <h3><a href="#">Tapanila Cup </a></h3>
         <p><a href="#">Kevät 2024</a></p>
         </div>
     </div>
       <div class="carousel-item">
-        <img src="LoisteKuvat/tullar.JPG" alt="Opinmäki" class="d-block w-100">
+        <img src="tullar.JPG" alt="Opinmäki" class="d-block w-100">
         <div class="carousel-caption">
             <h3><a href="#">Tullin piirin mestikset </a></h3>
         <p><a href="#">Kevät 2024</a></p>
         </div>
     </div>
       <div class="carousel-item">
-        <img src="LoisteKuvat/tullari2.JPG" alt="Hameenlinna" class="d-block w-100">
+        <img src="tullari2.JPG" alt="Hameenlinna" class="d-block w-100">
         <div class="carousel-caption">
             <h3><a href="#">Tullarit </a></h3>
         <p><a href="#">Syksy 2023</a></p>
@@ -152,7 +152,7 @@
 <div class="container mt-5">    
     <div class="row">
       <div class="col-md-4">
-        <img src="LoisteKuvat/keilat.JPG" alt="Turku" class="img-fluid">
+        <img src="keilat.JPG" alt="Turku" class="img-fluid">
       </div>
       <div class="col-md-4">
         <h4>Syksy 2023</h4>
@@ -163,7 +163,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="LoisteKuvat/keilat2.jpg" alt="Tullarit4" class="img-fluid">
+        <img src="keilat2.jpg" alt="Tullarit4" class="img-fluid">
       </div>
     </div> 
   </div>
@@ -171,7 +171,7 @@
   <div class="container mt-5">    
     <div class="row">
       <div class="col-md-4">
-        <img src="LoisteKuvat/tapiola2.jpg" alt="Turku" class="img-fluid">
+        <img src="tapiola2.jpg" alt="Turku" class="img-fluid">
       </div>
       <div class="col-md-4">
         <h4>Kevät 2024</h4>
@@ -182,7 +182,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="LoisteKuvat/tullarit3.JPG" alt="Tullarit4" class="img-fluid">
+        <img src="tullarit3.JPG" alt="Tullarit4" class="img-fluid">
       </div>
     </div> 
   </div>
@@ -190,7 +190,7 @@
   <div class="container mt-5">    
     <div class="row">
       <div class="col-md-4">
-        <img src="LoisteKuvat/pnv.JPG" alt="Turku" class="img-fluid">
+        <img src="pnv.JPG" alt="Turku" class="img-fluid">
       </div>
       <div class="col-md-4">
         <h4>Syksy 2024</h4>
@@ -201,7 +201,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="LoisteKuvat/pnv2.jpg" alt="Tullarit4" class="img-fluid">
+        <img src="pnv2.jpg" alt="Tullarit4" class="img-fluid">
       </div>
     </div> 
   </div>
@@ -215,15 +215,15 @@
 <section class="container my-5">
   <h2 class="text-center mb-4">Kuva Galleria</h2>
   <div class="photo-gallery">
-      <img src="LoisteKuvat/kuva1.jpg" alt="Memory 1">
-      <img src="LoisteKuvat/kuva10.JPG" alt="Memory 2">
-      <img src="LoisteKuvat/kuva11.jpg" alt="Memory 3">
-      <img src="LoisteKuvat/kuva4.JPG" alt="Memory 4">
-      <img src="LoisteKuvat/kuva5.jpg" alt="Memory 5">
-      <img src="LoisteKuvat/kuva6.jpg" alt="Memory 6">
-      <img src="LoisteKuvat/kuva7.jpg" alt="Memory 7">
-      <img src="LoisteKuvat/kuva8.jpg" alt="Memory 8">
-      <img src="LoisteKuvat/kuva9.jpg" alt="Memory 9">
+      <img src="kuva1.jpg" alt="Memory 1">
+      <img src="kuva10.JPG" alt="Memory 2">
+      <img src="kuva11.jpg" alt="Memory 3">
+      <img src="kuva4.JPG" alt="Memory 4">
+      <img src="kuva5.jpg" alt="Memory 5">
+      <img src="kuva6.jpg" alt="Memory 6">
+      <img src="kuva7.jpg" alt="Memory 7">
+      <img src="kuva8.jpg" alt="Memory 8">
+      <img src="kuva9.jpg" alt="Memory 9">
   </div>
 </section>
 
@@ -233,57 +233,57 @@
     <div id="photoCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="LoisteKuvat/kuv1.JPG" class="d-block w-100" alt="Image 1">
+                <img src="kuv1.JPG" class="d-block w-100" alt="Image 1">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="LoisteKuvat/kuv2.JPG" class="d-block w-100" alt="Image 2">
+                <img src="kuv2.JPG" class="d-block w-100" alt="Image 2">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="LoisteKuvat/kuv3.JPG" class="d-block w-100" alt="Image 3">
+                <img src="kuv3.JPG" class="d-block w-100" alt="Image 3">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-              <img src="LoisteKuvat/kuv4.JPG" class="d-block w-100" alt="Image 3">
+              <img src="kuv4.JPG" class="d-block w-100" alt="Image 3">
               <div class="carousel-caption d-none d-md-block">
               </div>
           </div>
           <div class="carousel-item">
-            <img src="LoisteKuvat/kuv5.JPG" class="d-block w-100" alt="Image 3">
+            <img src="kuv5.JPG" class="d-block w-100" alt="Image 3">
             <div class="carousel-caption d-none d-md-block">
             </div>
         </div>
         <div class="carousel-item">
-          <img src="LoisteKuvat/kuv6.JPG" class="d-block w-100" alt="Image 3">
+          <img src="kuv6.JPG" class="d-block w-100" alt="Image 3">
           <div class="carousel-caption d-none d-md-block">
           </div>
       </div>
       <div class="carousel-item">
-        <img src="LoisteKuvat/kuv7.JPG" class="d-block w-100" alt="Image 3">
+        <img src="kuv7.JPG" class="d-block w-100" alt="Image 3">
         <div class="carousel-caption d-none d-md-block">
         </div>
     </div>
     <div class="carousel-item">
-      <img src="LoisteKuvat/kuv8.JPG" class="d-block w-100" alt="Image 3">
+      <img src="kuv8.JPG" class="d-block w-100" alt="Image 3">
       <div class="carousel-caption d-none d-md-block">
       </div>
   </div>
   <div class="carousel-item">
-    <img src="LoisteKuvat/18.JPG" class="d-block w-100" alt="Image 3">
+    <img src="18.JPG" class="d-block w-100" alt="Image 3">
     <div class="carousel-caption d-none d-md-block">
     </div>
 </div>
 <div class="carousel-item">
-  <img src="LoisteKuvat/22.JPG" class="d-block w-100" alt="Image 3">
+  <img src="22.JPG" class="d-block w-100" alt="Image 3">
   <div class="carousel-caption d-none d-md-block">
   </div>
 </div>
 <div class="carousel-item">
-  <img src="LoisteKuvat/k52.JPG" class="d-block w-100" alt="Image 3">
+  <img src="k52.JPG" class="d-block w-100" alt="Image 3">
   <div class="carousel-caption d-none d-md-block">
   </div>
 </div>
@@ -441,15 +441,15 @@
     <section class="container my-5">
       <h2 class="text-center mb-4">Lisää kuvia </h2>
       <div class="photo-gallery">
-          <img src="LoisteKuvat/s45.JPG" alt="Memory 1">
-          <img src="LoisteKuvat/s48.JPEG" alt="Memory 2">
-          <img src="LoisteKuvat/s37.JPG" alt="Memory 3">
-          <img src="LoisteKuvat/k25.jpg" alt="Memory 4">
-          <img src="LoisteKuvat/35.jpg" alt="Memory 5">
-          <img src="LoisteKuvat/40.jpg" alt="Memory 6">
-          <img src="LoisteKuvat/k6.jpg" alt="Memory 7">
-          <img src="LoisteKuvat/k34.JPG" alt="Memory 8">
-          <img src="LoisteKuvat/k35.JPG" alt="Memory 9">
+          <img src="s45.JPG" alt="Memory 1">
+          <img src="s48.JPEG" alt="Memory 2">
+          <img src="s37.JPG" alt="Memory 3">
+          <img src="k25.jpg" alt="Memory 4">
+          <img src="35.jpg" alt="Memory 5">
+          <img src="40.jpg" alt="Memory 6">
+          <img src="k6.jpg" alt="Memory 7">
+          <img src="k34.JPG" alt="Memory 8">
+          <img src="k35.JPG" alt="Memory 9">
       </div>
     </section>
     <h1>Tullin piirin mestikset S2023</h1>
