--- a/Loiste.html
+++ b/Loiste.html
@@ -446,7 +446,7 @@
           <img src="s37.JPG" alt="Memory 3">
           <img src="k25.jpg" alt="Memory 4">
           <img src="35.jpg" alt="Memory 5">
-          <img src="40.jpg" alt="Memory 6">
+          <img src="40.JPG" alt="Memory 6">
           <img src="k6.jpg" alt="Memory 7">
           <img src="k34.JPG" alt="Memory 8">
           <img src="k35.JPG" alt="Memory 9">
