--- a/Loiste.html
+++ b/Loiste.html
@@ -259,12 +259,12 @@
         </div>
         </div>
         <div class="carousel-item">
-          <img src="kuv6.JPG" class="d-block w-100" alt="Image 3">
+          <img src="kuv6.jpg" class="d-block w-100" alt="Image 3">
           <div class="carousel-caption d-none d-md-block">
         </div>
         </div>
         <div class="carousel-item">
-            <img src="kuv7.JPG" class="d-block w-100" alt="Image 3">
+            <img src="kuv7.jpg" class="d-block w-100" alt="Image 3">
             <div class="carousel-caption d-none d-md-block">
         </div>
         </div>
